--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 		
 		
     
-     <link rel="shortcut icon" type="image/x-icon" href="http://example.org/favicon.ico">
-     <link rel="icon" type="image/x-icon" href="http://example.org/favicon.ico">
+     <link rel="shortcut icon" type="image/x-icon" href="https://lucasasoares.github.io/favicon.ico">
+     <link rel="icon" type="image/x-icon" href="https://lucasasoares.github.io/favicon.ico">
     
 	</head>
 	<body class="loading">
